example/deploys.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing-lab-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: testing-lab-frontend
  template:
    metadata:
      labels:
        app: testing-lab-frontend
    spec:
      containers:
        - name: testing-lab-frontend
          image: ghcr.io/chesterchutw/testing-lab-frontend:latest
          ports:
            - containerPort: 5173
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d/nginx.conf
              subPath: nginx.conf
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15 # Delay before liveness probe is initiated
            periodSeconds: 10 # How often to perform the probe
            timeoutSeconds: 5 # How long to wait for the probe to timeout
            successThreshold: 1 # Minimum consecutive successes for the probe to be considered successful
            failureThreshold: 3 # After how many failures the pod should be restarted
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 200m
              memory: 200Mi
      volumes:
        - name: config-volume
          configMap:
            name: nginx-config
