example/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testing-lab-frontend-pod
  labels:
    app: testing-lab-frontend
spec:
  containers:
    - name: testing-lab-frontend
      image: ghcr.io/chesterchutw/testing-lab-frontend:latest
      ports:
        - containerPort: 5173
      volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d/nginx.conf
          subPath: nginx.conf
          readOnly: true
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 15
        periodSeconds: 10
        timeoutSeconds: 5
        successThreshold: 1
        failureThreshold: 3
      resources:
        requests:
          cpu: 10m
          memory: 10Mi
        limits:
          cpu: 200m
          memory: 200Mi
  volumes:
    - name: config-volume
      configMap:
        name: nginx-config
