example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testing-lab-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / # URL 重寫，將所有路徑重寫為根目錄
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # 強制將 HTTP 請求重定向到 HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: "8m" # 限制客戶端最大請求體為 8MB
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: DENY";  # 添加自定義 HTTP 標頭來增強安全性
spec:
  rules:
    - host: "hw.k8s.local"
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testing-lab-frontend
                port:
                  number: 5173
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: testing-lab-backend
                port:
                  number: 8888
